<resources>
    <string name="app_name">QRCard</string>
    <string name="login">Login</string>
    <string name="password">Senha</string>
    <string name="forget_password">Esqueceu a senha?</string>
    <string name="new_user">Usuário novo? Cadastre-se!</string>
    <string name="recovering_password">Recuperação de Senha</string>
    <string name="recover_password">Recuperar</string>
    <string name="user_email">E-mail</string>
    <string name="user_name">Nome</string>
    <string name="sing_up">Cadastro</string>
    <string name="sing_up_confirmed">Cadastrar</string>
    <string name="restaurant_select">Selecionar Restaurante</string>
    <string name="qrcode_read">Entrar Sem QRCode</string>
    <string name="all_dishes">Todos</string>
    <string name="starter_dishes">Entradas</string>
    <string name="main_dishes">Principais</string>
    <string name="dessert">Sobremesas</string>
    <string name="item_detail">Detalhes do Produto</string>
    <string name="add_item">Adicionar Item</string>
    <string name="order_finished">Finalizar Compra</string>
    <string name="quantity">Quantidade : </string>
    <string name="order_observation">Observações:</string>
    <string name="table">Mesa:</string>
    <string name="itens">Itens:</string>
    <string name="total">Total:</string>
    <string name="methopaymant">Método de Pagamento</string>
    <string name="choose_form">Escolher pagamento</string>
    <string name="order_value_total">Total:</string>
    <string name="payment_method">Observações:</string>
    <string name="order_success_tab">Pedido Realizado</string>
    <string name="order_success">Seu pedido foi realizado com sucesso!</string>
    <string name="search">Procurar</string>
    <string name="debit">Débito</string>
    <string name="credit">Crédito</string>
    <string name="pix">Pix</string>
    <string name="attable">Mesa</string>
    <string name="createprodut">Criar Produto</string>
    <string name="select_image">Selecione uma imagem</string>
    <string name="price">Preço</string>
    <string name="description">Descrição</string>
    <string name="category">Categoria</string>
    <string name="response_erro">Sem itens para mostrar</string>
    <string name="perfil">Informação do Perfil\n</string>
    <string name="exit">Sair</string>
    <string name="order_detail">Detalhes do Pedido</string>
    <string name="order_id_text">Pedido ID:</string>
    <string name="new_order">Novo Pedido</string>
    <string name="delete_acc">Deletar Conta</string>
    <string name="back">Voltar</string>


</resources>