<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/perfil_image_layout"
        android:padding="10dp"
        android:src="@drawable/perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/sing_up"
        app:layout_constraintTop_toBottomOf="@id/iv_perfil"
        app:layout_constraintStart_toStartOf="@id/iv_perfil"
        app:layout_constraintEnd_toEndOf="@id/iv_perfil"/>

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:hint="@string/user_name"
        android:background="@drawable/input_text_layout"
        android:layout_margin="35dp"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:hint="@string/user_email"
        android:background="@drawable/input_text_layout"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:hint="@string/password"
        android:background="@drawable/input_text_layout"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_sing_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sing_up_confirmed"
        android:layout_marginTop="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/button_layout"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/et_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>