<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_search_item"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/search"
        android:background="@drawable/input_text_layout"
        android:layout_margin="6dp"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toTopOf="@id/v_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_perfil"/>

    <ImageView
        android:id="@+id/iv_perfil"
        android:layout_width="46dp"
        android:layout_height="44dp"
        android:layout_margin="6dp"
        android:background="@drawable/perfil_image_layout"
        android:src="@drawable/perfil"
        app:layout_constraintBottom_toTopOf="@id/v_line"
        app:layout_constraintEnd_toEndOf="parent"/>



    <View
        android:id="@+id/v_line"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginTop="60dp"
        android:background="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_line"
        app:tabBackground="@drawable/tab_item"
        app:tabIndicatorColor="#00FFFFFF"
        app:tabSelectedTextColor="@color/white"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"
        app:tabTextColor="@color/black">


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_dishes" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starter_dishes" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_dishes" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dessert" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>