<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createprodut"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/v_line1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/v_line1"/>


    <View
        android:id="@+id/v_line1"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginTop="60dp"
        android:background="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <Button
        android:id="@+id/iv_picture_product"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="25dp"
        android:text="@string/select_image"
        android:textColor="@color/white"
        android:background="@drawable/inputimage_layout"
        app:layout_constraintTop_toBottomOf="@id/v_line1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:hint="@string/user_name"
        android:background="@drawable/input_text_layout"
        android:layout_margin="35dp"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_picture_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_price"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:background="@drawable/input_text_layout"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:hint="@string/description"
        android:background="@drawable/input_text_layout"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_category"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:hint="@string/category"
        android:background="@drawable/input_text_layout"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_item"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/createprodut"
        android:background="@drawable/button_layout"
        android:textColor="@color/white"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>