<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/custom_background">

    <ImageView
        android:id="@+id/iv_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/perfil_image_layout"
        android:padding="10dp"
        android:layout_marginTop="74dp"
        android:src="@drawable/perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/iv_perfil"
        app:layout_constraintStart_toStartOf="@id/iv_perfil"
        app:layout_constraintEnd_toEndOf="@id/iv_perfil"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:hint="@string/user_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:boxStrokeColor="@color/transp"
        app:boxStrokeWidth="0dp"
        android:background="@drawable/input_text_layout"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:hint="@string/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:boxStrokeColor="@color/transp"
        app:boxStrokeWidth="0dp"
        android:background="@drawable/input_text_layout"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_senha"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            tools:text = "senha"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textStyle="bold"
        android:layout_margin="6dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/til_senha"
        app:layout_constraintEnd_toEndOf="@id/til_senha"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="90dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_layout"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/til_senha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/pb_loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:indeterminate="true"
        android:layout_marginBottom="60dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_login"
        />


    <TextView
        android:id="@+id/tv_sing_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/btn_login"/>



</androidx.constraintlayout.widget.ConstraintLayout>