<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/custom_background">

    <ImageView
        android:id="@+id/iv_recover_password"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="96dp"
        android:padding="20dp"
        android:background="@drawable/perfil_image_layout"
        android:src="@drawable/reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/recovering_password"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toBottomOf="@id/iv_recover_password"
        app:layout_constraintStart_toStartOf="@id/iv_recover_password"
        app:layout_constraintEnd_toEndOf="@id/iv_recover_password"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:hint="@string/user_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:boxStrokeColor="@color/transp"
        app:boxStrokeWidth="0dp"
        android:background="@drawable/input_text_layout"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_recover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recover_password"
        android:layout_marginTop="150dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_layout"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>