<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/methopaymant"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/v_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="15dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/icone_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/v_line"/>


    <View
        android:id="@+id/v_line"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginTop="60dp"
        android:background="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/v_line"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_margin="8dp"
            android:background="@drawable/detail_background">

            <ImageView
                android:id="@+id/iv_debit_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/debit_method" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_debit_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/debit"
                android:background="@drawable/button_layout"
                android:textColor="@color/white"
                android:layout_marginHorizontal="35dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_margin="8dp"
            android:background="@drawable/detail_background">
            <ImageView
                android:id="@+id/iv_credit_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/credit_method"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="252dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_credit_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/credit"
                android:background="@drawable/button_layout"
                android:textColor="@color/white"
                android:layout_marginHorizontal="35dp"
                app:layout_constraintTop_toTopOf="@id/iv_credit_method"
                app:layout_constraintBottom_toBottomOf="@id/iv_credit_method"
                app:layout_constraintStart_toEndOf="@id/iv_credit_method"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_margin="8dp"
            android:background="@drawable/detail_background">

            <ImageView
                android:id="@+id/iv_pix_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/pix_method"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="410dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_pix_method"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:text="@string/pix"
                android:background="@drawable/button_layout"
                android:textColor="@color/white"
                android:layout_marginHorizontal="35dp"
                app:layout_constraintTop_toTopOf="@id/iv_pix_method"
                app:layout_constraintBottom_toBottomOf="@id/iv_pix_method"
                app:layout_constraintStart_toEndOf="@id/iv_pix_method"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:layout_margin="8dp"
            android:background="@drawable/detail_background">

            <ImageView
                android:id="@+id/iv_attable_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/attable_method"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="568dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_attable_method"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/attable"
                android:background="@drawable/button_layout"
                android:textColor="@color/white"
                android:layout_marginHorizontal="35dp"
                app:layout_constraintTop_toTopOf="@id/iv_attable_method"
                app:layout_constraintBottom_toBottomOf="@id/iv_attable_method"
                app:layout_constraintStart_toEndOf="@id/iv_attable_method"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>















</androidx.constraintlayout.widget.ConstraintLayout>